--- a/company/index.html
+++ b/company/index.html
@@ -213,7 +213,8 @@
       <h1 class="text-center">오시는 길</h1>
       <div id="map" style="width:100%;height:350px;"></div>
 
-      <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2f0bb35932325e9049074ab790afaa8f"></script>
+      <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8192a3b70fb3ac2470ef1ad19408aeb1
+      "></script>
       <script>
       var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
           mapOption = { 
